kubernetes/docker-host/svc-dockerhost-linux.yaml
apiVersion: v1
kind: Service
metadata:
  name: dockerhost
spec:
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: dockerhost
subsets:
- addresses:
  - ip: 172.17.0.1
