kubernetes/docker-host/svc-dockerhost-mac-win.yaml
apiVersion: v1
kind: Service
metadata:
  name: dockerhost
spec:
  type: ExternalName
  externalName: host.docker.internal
